tests/NormalTests/paczka1/small_fuzzy/52903767.err
Error in line 1: xw9L S822 65,0
Error in line 2: Umyce2wf A633 78,2
Error in line 5: Umyce2wf S860 64,9
